--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,11 @@ html {
 
 
 #nombre {
-    font-size: 32px;
+    font-size: 48px;
+}
+
+#datos {
+    font-size: 22px;
 }
 
 .fa {
@@ -74,7 +78,6 @@ body {
 
 span {
     font-size: 22px;
-    text-align: justify;
 }
 
 #perfil {
@@ -178,6 +181,14 @@ iframe {
     height: 300px;
     border:0; 
     border-radius: 5px;
+}
+
+label {
+    font-size: 14px;
+}
+
+button {
+    font-size: 14px;
 }
 
 @keyframes up {
